--- a/TicTacToe v1/program files/Chamil & Lochana/TicTacToe.csproj
+++ b/TicTacToe v1/program files/Chamil & Lochana/TicTacToe.csproj
@@ -77,6 +77,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameStatus.cs" />
+    <Compile Include="MeBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MeBox.Designer.cs">
+      <DependentUpon>MeBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Token.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="Player.cs" />
@@ -90,6 +96,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MeBox.resx">
+      <DependentUpon>MeBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
